# dockit

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docker.rs  main.rs
src/lib/: api.ts  format.ts
src/types/: docker.ts
