[package]
name = "dockit"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
bollard = "0.19.3"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.2", features = [] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
